changed position of changelog

--- a/index.html
+++ b/index.html
@@ -412,8 +412,9 @@
         </section>
 
         <section class="changelog">
-            <h2 class="glow-text">Changelog</h2>
+            <!-- <h2 class="glow-text">Changelog</h2> -->
             <a href="https://github.com/coddrago/Heroku/blob/master/CHANGELOG.md" class="changelog-button">
+                <i class="fab fa-github"></i>
                 <span>View Latest Changes</span>
                 <i class="fas fa-arrow-right"></i>
             </a>
