changed available languages

--- a/index.html
+++ b/index.html
@@ -372,12 +372,8 @@
             <div class="language-grid">
                 <span class="language-tag">English</span>
                 <span class="language-tag">Russian</span>
-                <span class="language-tag">Français</span>
                 <span class="language-tag">Deutsch</span>
-                <span class="language-tag">Español</span>
-                <span class="language-tag">Türkçe</span>
-                <span class="language-tag">Italiano</span>
-                <span class="language-tag">O'zbek</span>
+                <span class="language-tag">Ukranian</span>
             </div>
         </section>
 
