--- a/index.html
+++ b/index.html
@@ -389,7 +389,9 @@
             <div class="footer-content">
                 <div class="love-message">
                     <p>With love</p>
-                    <div class="animated-logo">🪐</div>
+                    <div class="animated-logo">
+                        <img src="icon.svg" alt="Planet Icon" class="logo-icon">
+                    </div>
                     <p>Heroku Userbot ❤</p>
                 </div>
                 <div class="developer-info">
