added installation with module

--- a/installation.html
+++ b/installation.html
@@ -20,6 +20,28 @@
         <p class="subtitle">Choose your platform and follow the instructions carefully</p>
 
         <div class="installation-guide">
+            <!-- Module Section -->
+            <section class="platform-section">
+                <div class="platform-header">
+                    <img src="moon.svg" class="platform-icon" alt="Railway">
+                    <h2 class="platform-title">Userbot Module</h2>
+                </div>
+                <div class="step-list">
+                    <div class="step-item">Install directly through your userbot</div>
+                    <div class="step-item">Run this command in any chat:</div>
+                </div>
+                <pre class="code-block">sudo apt update && sudo apt upgrade -y
+sudo apt install git python3-pip -y
+git clone https://github.com/coddrago/Heroku
+cd Heroku
+pip install -r requirements.txt
+python3 -m hikka</pre>
+                <div class="warning">
+                    ⚠️ Required already installed Hikka userbot
+                </div>
+            </section>
+
+        <div class="installation-guide">
             <!-- RailWay Section -->
             <section class="platform-section">
                 <div class="platform-header">
