changed styles structure

--- a/installation.html
+++ b/installation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Installation Guide</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="installation.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
 </head>
@@ -30,12 +30,7 @@
                     <div class="step-item">Install directly through your userbot</div>
                     <div class="step-item">Run this command in any chat:</div>
                 </div>
-                <pre class="code-block">sudo apt update && sudo apt upgrade -y
-sudo apt install git python3-pip -y
-git clone https://github.com/coddrago/Heroku
-cd Heroku
-pip install -r requirements.txt
-python3 -m hikka</pre>
+                <pre class="code-block">.dlm https://raw.githubusercontent.com/coddrago/modules/main/SwitchToHeroku.py</pre>
                 <div class="warning">
                     ⚠️ Required already installed Hikka userbot
                 </div>
@@ -118,5 +113,6 @@ python3.10 -m hikka --no-web</pre>
             </section>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
