jamhost and changes on main pages (instructions link)

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="platforms">
             <h2 class="glow-text">Installation Platforms</h2>
             <div class="platform-grid">
-                <a href="/platform#vds" class="platform-button vds-card">
+                <a href="/heroku/installation#ubuntu" class="platform-button vds-card">
                     <div class="platform-icon">
                         <svg viewBox="0 0 100 100" class="vds-icon">
                             <rect class="server-rack" x="20" y="10" width="60" height="80" rx="5" fill="none" stroke="currentColor" stroke-width="2"/>
@@ -83,7 +83,7 @@
                     <span>VDS</span>
                 </a>
 
-                <a href="/platform#userland" class="platform-button userland-card">
+                <a href="/heroku/installation#userland" class="platform-button userland-card">
                     <div class="platform-icon">
                         <svg viewBox="0 0 100 100" class="userland-icon">
                             <rect class="phone-body" x="30" y="10" width="40" height="80" rx="5" fill="none" stroke="currentColor" stroke-width="2"/>
@@ -104,7 +104,7 @@
                     <span>Userland</span>
                 </a>
 
-                <a href="/platform#termux" class="platform-button termux-card">
+                <a href="/heroku/installation#termux" class="platform-button termux-card">
                     <div class="platform-icon">
                         <svg viewBox="0 0 100 100" class="termux-icon">
                             <rect class="terminal-window" x="10" y="10" width="80" height="80" rx="5" fill="none" stroke="currentColor" stroke-width="2"/>
@@ -123,7 +123,7 @@
                     <span>Termux</span>
                 </a>
 
-                <a href="/platform#railway" class="platform-button railway-card">
+                <a href="/heroku/installation#railway" class="platform-button railway-card">
                     <div class="platform-icon">
                         <svg viewBox="0 0 100 100" class="railway-icon">
                             <g class="tracks">
@@ -150,7 +150,7 @@
                     <span>Railway</span>
                 </a>
 
-                <a href="/platform#lavhost" class="platform-button hikkahost-card">
+                <a href="/heroku/installation#module" class="platform-button hikkahost-card">
                     <div class="platform-icon">
                         <svg viewBox="0 0 100 100" class="hikkahost-icon">
                             <g class="stars-background">
@@ -172,7 +172,7 @@
                     <span>HikkaHost</span>
                 </a>
 
-                <a href="/platform#jamhost" class="platform-button jamhost-card">
+                <a href="/heroku/installation#jamhost" class="platform-button jamhost-card">
                     <div class="platform-icon">
                         <svg viewBox="0 0 100 100" class="jamhost-icon">
                             <pattern id="grid" width="10" height="10" patternUnits="userSpaceOnUse">
