--- a/installation.html
+++ b/installation.html
@@ -21,7 +21,7 @@
 
         <div class="installation-guide">
             <!-- Module Section -->
-            <section class="platform-section">
+            <section class="platform-section" id="module">
                 <div class="platform-header">
                     <img src="moon.svg" class="platform-icon" alt="Railway">
                     <h2 class="platform-title">Userbot Module</h2>
@@ -37,8 +37,21 @@
             </section>
 
         <div class="installation-guide">
+            <!-- JamHost Section -->
+            <section class="platform-section" id="jamhost">
+                <div class="platform-header">
+                    <img src="jamhost.png" class="platform-icon" alt="JamHost" width="500">
+                    <h2 class="platform-title">JamHost</h2>
+                </div>
+                <div class="step-list">
+                    <div class="step-item">Proceed to <a href="https://t.me/jamhostbot" class="link">@jamhostbot</a></div>
+                    <div class="step-item">Type /pay and follow its instructions</div>
+                </div>
+            </section>
+
+        <div class="installation-guide">
             <!-- RailWay Section -->
-            <section class="platform-section">
+            <section class="platform-section" id="railway">
                 <div class="platform-header">
                     <img src="railway.svg" class="platform-icon" alt="Railway">
                     <h2 class="platform-title">RailWay</h2>
@@ -51,12 +64,12 @@
                     🚀 Deploy on Railway
                 </a>
                 <div class="warning">
-                    Any userbots are officially prohibited on RailWay. Account bans are your responsibility.
+                    ⚠️ Any userbots are officially prohibited on RailWay. Account bans are your responsibility.
                 </div>
             </section>
 
             <!-- Ubuntu Section -->
-            <section class="platform-section">
+            <section class="platform-section" id="ubuntu">
                 <div class="platform-header">
                     <img src="ubuntu.svg" class="platform-icon" alt="Ubuntu">
                     <h2 class="platform-title">Ubuntu</h2>
@@ -70,7 +83,7 @@ python3 -m hikka</pre>
             </section>
 
             <!-- UserLAnd Section -->
-            <section class="platform-section">
+            <section class="platform-section" id="userland">
                 <div class="platform-header">
                     <img src="userland.svg" class="platform-icon" alt="UserLAnd">
                     <h2 class="platform-title">UserLAnd</h2>
@@ -89,7 +102,7 @@ python3 -m hikka</pre>
             </section>
 
             <!-- Termux Section -->
-            <section class="platform-section">
+            <section class="platform-section" id="termux">
                 <div class="platform-header">
                     <img src="termux.svg" class="platform-icon" alt="Termux">
                     <h2 class="platform-title">Termux</h2>
